--- a/src/main/webapp/template/layout/default.html
+++ b/src/main/webapp/template/layout/default.html
@@ -31,5 +31,6 @@
 	</div>
 	<script src="js/app.js"></script>
 	<script src="js/default.js"></script>
+	<script src="js/index.js"></script>
 </body>
 </html>
