--- a/src/main/webapp/template/element/header.html
+++ b/src/main/webapp/template/element/header.html
@@ -1,8 +1,8 @@
 <nav th:fragment="header-left">
     <div class="sidebar-content js-simplebar">
-        <a class="sidebar-brand" href="/">
+        <a class="sidebar-brand" href="/user">
             <img id="avatarImage" class="avatar img-fluid rounded me-1" alt="Charles Hall"/> hi,
-            <span id="username" class="align-middle ">222</span>
+            <span id="username" class="align-middle " style="font-style: italic;"></span>
         </a>
         <ul class="sidebar-nav">
             <li class="sidebar-header">
@@ -139,6 +139,7 @@
                     </div>
                 </div>
             </li>
+
             <li class="nav-item dropdown">
                 <a class="nav-icon dropdown-toggle" href="#" id="messagesDropdown" data-bs-toggle="dropdown">
                     <div class="position-relative">
@@ -213,6 +214,30 @@
                     <div class="dropdown-menu-footer">
                         <a href="#" class="text-muted">Show all messages</a>
                     </div>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-icon dropdown-toggle d-inline-block d-sm-none" href="#" data-bs-toggle="dropdown">
+                    <i class="align-middle" data-feather="settings"></i>
+                </a>
+
+                <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="/user" data-bs-toggle="dropdown">
+                    <img id="avatarImage2" class="avatar img-fluid rounded me-1" alt="Charles Hall"/>
+                    <span id="username2" class="align-middle " style="font-style: normal;font-weight: bold;">222</span>
+                </a>
+                <div class="dropdown-menu dropdown-menu-end">
+                    <a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1"
+                                                                          data-feather="user"></i> Profile</a>
+                    <a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="pie-chart"></i>
+                        Analytics</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="index.html"><i class="align-middle me-1"
+                                                                  data-feather="settings"></i> Settings &
+                        Privacy</a>
+                    <a class="dropdown-item" href="#"><i class="align-middle me-1"
+                                                         data-feather="help-circle"></i> Help Center</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Log out</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
