--- a/src/main/webapp/template/page/user-detail.html
+++ b/src/main/webapp/template/page/user-detail.html
@@ -24,9 +24,9 @@
 <div class="wrapper">
     <nav th:fragment="header-left">
         <div class="sidebar-content js-simplebar">
-            <a class="sidebar-brand" href="/">
-                <img src="img/avatars/logo.png" class="avatar img-fluid rounded me-1" alt="Charles Hall"/>
-                <span id="username" class="align-middle"></span>
+            <a class="sidebar-brand" href="/user">
+                <img id="avatarImage" class="avatar img-fluid rounded me-1" alt="Charles Hall"/> hi,
+                <span id="username" class="align-middle " style="font-style: italic;">222</span>
             </a>
             <ul class="sidebar-nav">
                 <li class="sidebar-header">
@@ -69,12 +69,7 @@
                             class="align-middle">Diary management</span>
                     </a>
                 </li>
-<!--                <li class="sidebar-item">-->
-<!--                    <a class="sidebar-link" href="/charts">-->
-<!--                        <i class="align-middle" data-feather="bar-chart-2"></i> <span-->
-<!--                            class="align-middle">Charts</span>-->
-<!--                    </a>-->
-<!--                </li>-->
+
                 <li class="sidebar-item">
                     <a class="sidebar-link" href="/login">
                         <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign out</span>
@@ -245,8 +240,8 @@
                         </a>
 
                         <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
-                            <img src="img/avatars/avatar.jpg" class="avatar img-fluid rounded me-1" alt="Charles Hall"/>
-                            <span class="text-dark">Charles Hall</span>
+                            <img id="avatarImage2" class="avatar img-fluid rounded me-1" alt="Charles Hall"/>
+                            <span id="username2" class="align-middle " style="font-style: normal;font-weight: bold;">222</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end">
                             <a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1"
@@ -282,27 +277,21 @@
                                 <h5 class="card-title mb-0">Profile Details</h5>
                             </div>
                             <div class="card-body text-center">
-                                <img src="img/avaad.png" alt="Christina Mason" class="img-fluid rounded-circle mb-2"
+                                <img id="avatarUser" src="" alt="Christina Mason" class="img-fluid rounded-circle mb-2"
                                      width="128" height="128"/>
-                                <h5 class="card-title mb-0">Dao Phu Hung</h5>
-                                <div class="text-muted mb-2">ADMIN</div>
+                                <h5 class="card-title mb-0" id="nickName">Dao Phu Hung</h5>
 
-                                <div>
-                                    <a class="btn btn-primary btn-sm" href="#"><span data-feather="message-square"></span>
-                                        Message</a>
-                                </div>
                             </div>
                             <hr class="my-0"/>
                             <div class="card-body">
-                                <h5 class="h6 card-title">About</h5>
+                                <h5 class="h6 card-title">Thông tin cá nhân</h5>
                                 <ul class="list-unstyled mb-0">
-                                    <li class="mb-1"><span data-feather="home" class="feather-sm me-1"></span> Lives in <a
-                                            href="#">San Francisco, SA</a></li>
-
-                                    <li class="mb-1"><span data-feather="briefcase" class="feather-sm me-1"></span> Works at <a
-                                            href="#">GitHub</a></li>
-                                    <li class="mb-1"><span data-feather="map-pin" class="feather-sm me-1"></span> From <a
-                                            href="#">Boston</a></li>
+                                    <li class="mb-1"><span data-feather="mail" class="feather-sm me-1"></span> Email: <a
+                                            href="#" id="email">Boston</a></li>
+                                    <li class="mb-1"><span data-feather="phone" class="feather-sm me-1"></span> Phone number: <a
+                                            href="#" id="phone">Boston</a></li>
+                                    <li class="mb-1"><span data-feather="calendar" class="feather-sm me-1"></span> Date: <a
+                                            href="#" id="date">Boston</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -361,8 +350,10 @@
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="js/default.js"></script>
 <script src="js/app.js"></script>
 <script src="js/diary-manager.js"></script>
+
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         function getUrlParameter(name) {
