--- a/src/main/webapp/template/page/diary-manager.html
+++ b/src/main/webapp/template/page/diary-manager.html
@@ -1,5 +1,26 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/default}">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>Material Design for Bootstrap</title>
+    <!-- MDB icon -->
+    <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
+    <!-- Font Awesome -->
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <!-- Google Fonts Roboto -->
+    <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <!-- MDB -->
+    <link rel="stylesheet" href="css/mdb.min.css" />
+</head>
 <body>
 <main layout:fragment="content">
     <div class="container-fluid p-0">
@@ -46,9 +67,9 @@
 
 
                                 </div>
-                                <div class="col-1" data-feather="trash-2" style="margin-top: -45px; margin-left: 40px">
+<!--                                <div class="col-1" data-feather="trash-2" style="margin-top: 20px; margin-left: 20px">-->
 
-                                </div>
+<!--                                </div>-->
                             </div>
                         </div>
                     </div>
