--- a/src/main/webapp/template/page/pages-profile.html
+++ b/src/main/webapp/template/page/pages-profile.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
             <div class="col-md-3 col-xl-3">
-                <div class="card mb-3">
+                <div class="card mb-3" style="border-radius:10% 10% 10% 10%">
                     <div class="card-header">
                         <h5 class="card-title mb-0">Profile admin details</h5>
                     </div>
@@ -50,8 +50,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="card flex-fill">
-                    <div class="card-header">
+                <div class="card flex-fill" style="border-radius:10% 10% 10% 10%;">
+                    <div class="card-header" style="border-radius:10% 10% 10% 10%">
 
                         <h5 class="card-title mb-0">Calendar</h5>
                     </div>
@@ -64,8 +64,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-6">
-                <div class="card flex-fill w-100">
+            <div class="col-12 col-lg-6" >
+                <div class="card flex-fill w-100" style="border-radius:10%;">
                     <div class="card-header">
                         <h5 class="card-title">Biểu đồ số lượng người tham gia app</h5>
                     </div>
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card flex-fill w-100">
+                <div class="card flex-fill w-100" style="border-radius:10% ">
                     <div class="card-header">
                         <h5 class="card-title">Biểu đồ số lượng người dùng tạo nhật ký</h5>
                     </div>
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card flex-fill w-100">
+                <div class="card flex-fill w-100" style="border-radius:10%">
                     <div class="card-header">
                         <h5 class="card-title">Biểu đồ cảm xúc người dùng</h5>
                     </div>
