--- a/src/main/webapp/template/page/login.html
+++ b/src/main/webapp/template/page/login.html
@@ -131,10 +131,12 @@
                                 </div>
                                 <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
                                     <div class="text-white px-3 py-4 p-md-5 mx-md-4">
-                                        <h4 class="mb-4">We are more than just a company</h4>
-                                        <p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                        <h4 class="mb-4">We are Diary App team</h4>
+                                        <p class="small mb-0">This is a web browser for admins to manage the diary app.</p>
+                                        <p class="small mb-0">The Diary app is an app for people going through a difficult journey with depression. With a user-friendly interface and simple functionality, Diary is not only a daily note-taking app but also a psychological companion.
+                                        </p>
+                                        <p class="small mb-0">The application not only helps users record daily thoughts and emotions, but also provides special features such as psychological Q&A and listening to relaxing audio music.
+                                            Diary helps users feel secure in sharing private thoughts without worrying about privacy invasion.</p>
                                     </div>
                                 </div>
                             </div>
